--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,7 +2,9 @@
 version: 2
 
 build:
-  image: latest
+  os: "ubuntu-20.04"
+  tools:
+    python: 3.9
 
 python:
   # Install our python package before building the docs
