--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,6 @@ pandas
 pyyaml
 opencv-python-headless
 Pillow
+imageio
+av
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
