--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pandas
 pyyaml
 opencv-python-headless
 Pillow
-imageio
+imageio==2.30.0
 av
 fastcrc
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
