--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ Pillow
 imageio==2.30.0
 av
 fastcrc
+dict-plus==0.3.4
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
