--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,3 +11,5 @@ python:
   install:
     - method: pip
       path: .
+    - requirements: requirements.txt
+    - requirements: dev-requirements.txt
