predicted saccade work start

--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ imageio
 av
 fastcrc
 scipy
+scikit-learn
 dict-plus
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
 spencer-funcs
