--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,5 @@ scikit-learn
 dict-plus
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
 spencer-funcs>=0.0.3
+matplotlib
+ipympl
