--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ dict-plus
 #open-ephys-python-tools https://github.com/open-ephys/open-ephys-python-tools
 spencer-funcs>=0.0.3
 matplotlib
+plotly
 ipympl
 plotly
